Initial TPOT setup
Adding the commands for the install of TPOT to the anaconda environment

--- a/AutoML_Gui.html
+++ b/AutoML_Gui.html
@@ -2,7 +2,7 @@
 <html style="padding:20px">
 <head>
   <meta charset="utf-8">
-  <title>Python - Single Input Output</title>
+  <title>AutoML with TPOT</title>
   <script type="text/javascript">
     document.write('<link rel="import" href="' + window.Alteryx.LibDir + '2/lib/includes.html">');
   </script>
@@ -33,7 +33,7 @@
 			</div>
 		</div>
 	</fieldset>
-    
+
   </form>
   <script type="text/javascript">
 
@@ -46,11 +46,11 @@
   	}
 
     Alteryx.Gui.BeforeLoad = (manager, AlteryxDataItems, json) => {
-	
+
       const constrainedNumberDataItem = new AlteryxDataItems.ConstrainedInt('NRecords', {min: 0})
       manager.addDataItem(constrainedNumberDataItem)
       manager.bindDataItemToWidget(constrainedNumberDataItem, 'ns')
-	  
+
       const operationSelectRadioGroup = new AlteryxDataItems.StringSelector('OrderType', {
         optionList: [
           {label: 'Descending', value: 'Desc'},
